--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-agent-builder",
+  "name": "g8n-gemini-orchestrator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
